Updated Cognito env variables

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
-REACT_APP_USER_POOL_ID=eu-north-1_LAjkREQ5V
-REACT_APP_CLIENT_ID=5pc5ngqoek0qerssb723845i3
+REACT_APP_USER_POOL_ID=eu-north-1_lURXU8I356
+REACT_APP_CLIENT_ID=4r29jhakdobni5s1trhfo5s371n9
 REACT_APP_REGION=eu-north-1
+REACT_APP_COGNITO_DOMAIN=https://eu-north-1_lURXU8I356.auth.eu-north-1.amazoncognito.com
